--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
-
+/lab*/test.class/
 /lab*/.idea/
 /lab*/cmake-build-debug
 /lab*/CMakeLists.txt
